--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,7 +48,7 @@ body {
 /* Responsive Design */
 
 /*Mobile*/
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 21.875rem) {
   /* NAVBAR - Mobile */
   .navbarContainer {
     display: none;
@@ -128,6 +128,7 @@ body {
       }
     }
     .indexCarousel {
+      max-width: 21.875rem;
       .carousel {
         display: block;
         font-family: $fontPat;
