--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,7 +48,7 @@ body {
 /* Responsive Design */
 
 /*Mobile*/
-@media only screen and (max-width: 21.875rem) {
+@media only screen and (max-width: 767px) {
   /* NAVBAR - Mobile */
   .navbarContainer {
     display: none;
@@ -117,9 +117,10 @@ body {
 
   .indexMainCenter {
     .indexMainText {
+      width: 22rem;
       .indexCenterImg {
-        display: block;
-        float: right;
+        width: 21.8rem;
+        margin: 1rem;
       }
       .indexMTHeader {
         font-size: $headerSize;
@@ -128,8 +129,8 @@ body {
       }
     }
     .indexCarousel {
-      max-width: 21.875rem;
       .carousel {
+        width: 21.8rem;
         display: block;
         font-family: $fontPat;
         margin-top: 4px;
@@ -590,6 +591,8 @@ body {
       .indexCenterImg {
         display: block;
         float: right;
+        width: 28.8rem;
+        margin: 1rem;
       }
       .indexMTHeader {
         font-size: $headerSize;
@@ -1146,6 +1149,8 @@ body {
   .indexMainCenter {
     .indexMainText {
       .indexCenterImg {
+        max-width: 31.25rem;
+        margin: 1rem;
         display: block;
         float: right;
       }
