--- a/css/main.css
+++ b/css/main.css
@@ -6166,7 +6166,7 @@ body {
     margin: 1rem;
   }
   .indexMainCenter .indexMainText .indexMTHeader {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: "Henny Penny";
     font-weight: bolder;
   }
@@ -6254,13 +6254,13 @@ body {
   }
   /* ABOUT - MOBILE */
   .aboutMainTextCenter header {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: Pattaya;
     text-align: center;
   }
   .aboutMainTextCenter .aboutMayorText {
     background-color: #fdfddc;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: justify;
     padding: 8px;
     box-shadow: -10px 10px 20px 2px;
@@ -6272,7 +6272,7 @@ body {
     padding: 5px 10px;
   }
   .aboutMainTextCenter .aboutHeadline {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: "Henny Penny";
     font-weight: bolder;
     color: #9453a6;
@@ -6283,13 +6283,13 @@ body {
   /* End Of About*/
   /* MEDIA - MOBILE */
   .mediaMain .mediaHeader {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: Pattaya;
     text-align: center;
   }
   .mediaMain .mediaText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
   }
   .mediaMain .gridCenterize {
@@ -6398,7 +6398,7 @@ body {
   }
   .sponsorsList-SMALL .sponsText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .sponsorsList-SMALL .watermarkPrPa {
     display: flex;
@@ -6432,7 +6432,7 @@ body {
   }
   .sponsorsList .sponsText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .sponsorsList .watermarkPrPa {
     display: flex;
@@ -6453,7 +6453,7 @@ body {
   }
   .FAQWrapper p {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: justify;
   }
   .FAQWrapper h2 {
@@ -6480,11 +6480,11 @@ body {
   /* CONTACT - MOBILE */
   .fullContactForm .contactText header {
     font-family: Pattaya;
-    font-size: 1.68rem;
+    font-size: 2rem;
   }
   .fullContactForm .contactText p {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .fullContactForm .contactForm .row .col-md-10 {
     margin: 0 auto;
@@ -6492,7 +6492,7 @@ body {
   .fullContactForm .contactBtnColor {
     background-color: #9453a6;
     font-family: Pattaya;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     border: 0;
     float: right;
     padding: 7px 15px;
@@ -6567,7 +6567,7 @@ body {
     margin: 1rem;
   }
   .indexMainCenter .indexMainText .indexMTHeader {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: "Henny Penny";
     font-weight: bolder;
   }
@@ -6653,15 +6653,14 @@ body {
     margin: 0 auto;
   }
   /* ABOUT - TABLET */
-  /* ABOUT - TABLET */
   .aboutMainTextCenter header {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: Pattaya;
     text-align: center;
   }
   .aboutMainTextCenter .aboutMayorText {
     background-color: #fdfddc;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: justify;
     padding: 8px;
     box-shadow: -10px 10px 20px 2px;
@@ -6673,7 +6672,7 @@ body {
     padding: 5px 10px;
   }
   .aboutMainTextCenter .aboutHeadline {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: "Henny Penny";
     font-weight: bolder;
     color: #9453a6;
@@ -6684,13 +6683,13 @@ body {
   /* End Of About*/
   /* MEDIA - TABLET */
   .mediaMain .mediaHeader {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: Pattaya;
     text-align: center;
   }
   .mediaMain .mediaText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
   }
   .mediaMain .gridCenterize {
@@ -6801,7 +6800,7 @@ body {
   }
   .sponsorsList .sponsText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .sponsorsList .watermarkPrPa {
     display: flex;
@@ -6822,7 +6821,7 @@ body {
   }
   .FAQWrapper p {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: justify;
   }
   .FAQWrapper h2 {
@@ -6849,11 +6848,11 @@ body {
   /* CONTACT - TABLET */
   .fullContactForm .contactText header {
     font-family: Pattaya;
-    font-size: 1.68rem;
+    font-size: 2rem;
   }
   .fullContactForm .contactText p {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .fullContactForm .contactForm .row .col-md-10 {
     margin: 0 auto;
@@ -6861,7 +6860,7 @@ body {
   .fullContactForm .contactBtnColor {
     background-color: #9453a6;
     font-family: Pattaya;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     border: 0;
     float: right;
     padding: 7px 15px;
@@ -7042,6 +7041,9 @@ body {
     right: 0;
   }
   /* Center - Txt&Imgs */
+  .indexMainCenter .indexMainText {
+    font-size: 1.5rem;
+  }
   .indexMainCenter .indexMainText .indexCenterImg {
     max-width: 31.25rem;
     margin: 1rem;
@@ -7049,7 +7051,7 @@ body {
     float: right;
   }
   .indexMainCenter .indexMainText .indexMTHeader {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: "Henny Penny";
     font-weight: bolder;
   }
@@ -7077,13 +7079,14 @@ body {
   /* The End of Index */
   /* ABOUT - styles*/
   .aboutMainTextCenter header {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: Pattaya;
     text-align: center;
   }
   .aboutMainTextCenter .aboutMayorText {
+    font-size: 1.5rem;
     background-color: #fdfddc;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: justify;
     padding: 8px;
     box-shadow: -10px 10px 20px 2px;
@@ -7095,23 +7098,31 @@ body {
     padding: 5px 10px;
   }
   .aboutMainTextCenter .aboutHeadline {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: "Henny Penny";
     font-weight: bolder;
     color: #9453a6;
   }
-  .aboutMainTextCenter .aboutTextImages {
-    margin-right: 10px;
+  .aboutMainTextCenter .aboutText {
+    font-size: 1.5rem;
+  }
+  .aboutMainTextCenter .aboutCard {
+    margin: 20px;
+  }
+  .aboutMainTextCenter .aboutCardText {
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: #fdfddc;
   }
   /* MEDIA - styles*/
   .mediaMain .mediaHeader {
-    font-size: 1.68rem;
+    font-size: 2rem;
     font-family: Pattaya;
     text-align: center;
   }
   .mediaMain .mediaText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: center;
   }
   .mediaMain .gridCenterize {
@@ -7221,7 +7232,7 @@ body {
   }
   .sponsorsList .sponsText {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .sponsorsList .watermarkPrPa {
     display: flex;
@@ -7242,7 +7253,7 @@ body {
   }
   .FAQWrapper p {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-align: justify;
   }
   .FAQWrapper h2 {
@@ -7269,11 +7280,11 @@ body {
   /* CONTACT - Styles */
   .fullContactForm .contactText header {
     font-family: Pattaya;
-    font-size: 1.68rem;
+    font-size: 2rem;
   }
   .fullContactForm .contactText p {
     font-family: Roboto;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .fullContactForm .contactForm .row .col-md-10 {
     margin: 0 auto;
@@ -7281,7 +7292,7 @@ body {
   .fullContactForm .contactBtnColor {
     background-color: #9453a6;
     font-family: Pattaya;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     border: 0;
     float: right;
     padding: 7px 15px;
